--- a/hotels.html
+++ b/hotels.html
@@ -11,7 +11,7 @@
     <div class="container">
     <header class="main-header">
       <nav class="main-navigation">
-          <a class="header-logo">
+          <a class="header-logo" href="index.html">
             <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип Седоны">
           </a>
           <ul class="site-navigation">
@@ -83,7 +83,23 @@
       </section>
 
       <section class="filters-results">
-        <!--Здесь будет результат фильтра-->
+        <div class="filters-result">
+        <h3 class="found">Найдено: 3</h3>
+        <div class="sorting">Сортировка:</div>
+        <ul class="sorting-type">
+          <li><a class="sorting-type current-sorting">По цене</a></li>
+          <li><a class="sorting-type" href="#">По типу</a></li>
+          <li><a class="sorting-type" href="#">По рейтингу</a></li>
+        </ul>
+        <div class="filter-buttons">
+        <button class="filter-button button-up">
+          <svg width="11" height="10" viewBox="0 0 11 10"><path d="M5.5 0L0 10h11z"/></svg>
+        </button>
+        <button class="filter-button button-down">
+          <svg width="11" height="10" viewBox="0 0 11 10"><path d="M5.5 10L0 0h11"/></svg>
+        </button>
+      </div>
+      </div>
       </section>
 
       <section class="catalog">
@@ -97,8 +113,8 @@
               <span class="hotel-type">Гостиница</span>
               <span class="hotel-price">От 4000 Р.</span>
             </div>
-              <a class="details" href="amara.html">Подробнее</a>
-              <a class="book" href="#">Забронировать</a>
+              <a class="hotel-button details" href="amara.html">Подробнее</a>
+              <a class="hotel-button book" href="#">Забронировать</a>
             </div>
             <div class="hotels-item-rating">
             <div class="stars">
@@ -119,8 +135,8 @@
                 <span class="hotel-type">Мотель</span>
                 <span class="hotel-type">От 3000 Р.</span>
               </div>
-                <a class="button details" href="desert.html">Подробнее</a>
-                <a class="button book" href="#">Забронировать</a>
+                <a class="hotel-button details" href="desert.html">Подробнее</a>
+                <a class="hotel-button book" href="#">Забронировать</a>
               </div>
               <div class="hotels-item-rating">
               <div class="stars">
@@ -136,12 +152,12 @@
                 <img class="hotel-image" src="img/villas.jpg" width="135" height="90" alt="Фото Villas at Poco Diablo">
                 <div class="hotels-item-info">
                 <h3><a class="hotel-name" href="#">Villas at Poco Diablo</a></h3>
-                <div class="hotel-information">
+                <div class="hotel-descriprion">
                   <span class="hotel-type">Апартаменты</span>
                   <span class="hotel-price">От 2000 Р.</span>
                 </div>
-                <a class="button details" href="villas.html">Подробнее</a>
-                <a class="button book" href="#">Забронировать</a>
+                <a class="hotel-button details" href="villas.html">Подробнее</a>
+                <a class="hotel-button book" href="#">Забронировать</a>
                 </div>
                 <div class="hotels-item-rating">
                 <div class="stars">
@@ -152,7 +168,7 @@
                 </div>
               </li>
             </ul>
-          </section>  
+          </section>
     </main>
 
     <footer class="main-footer">
