--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <div class="container index-container">
-    <header class="main-header">
-      <nav class="main-navigation">
-          <a class="header-logo">
-            <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип Седоны">
-          </a>
-          <ul class="site-navigation">
-              <li><a class="navigation-item-left" href="info.html">Информация</a></li>
-              <li><a class="navigation-item-left" href="photos-and-videos.html">Фото и видео</a></li>
-              <li><a class="navigation-item-right" href="state-map.html">Карта штата</a></li>
-              <li><a class="navigation-item-right" href="hotels.html">Гостиницы</a></li>
-          </ul>
-      </nav>
-    </header>
+    <div class="container modal-map">
 
+     <header class="main-header">
+       <nav class="main-navigation">
+         <a class="header-logo">
+           <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип Седоны">
+         </a>
+         <ul class="site-navigation">
+           <li><a class="navigation-item-left" href="info.html">Информация</a></li>
+           <li><a class="navigation-item-left" href="photos-and-videos.html">Фото и видео</a></li>
+           <li><a class="navigation-item-right" href="state-map.html">Карта штата</a></li>
+           <li><a class="navigation-item-right" href="hotels.html">Гостиницы</a></li>
+         </ul>
+       </nav>
+     </header>
 
       <main>
       <section class="welcome-block">
@@ -132,7 +132,6 @@
     <button type="submit" class="button-search">Найти</button>
   </form>
 </section>
-</main>
 
     <footer class="main-footer">
       <p class="hashtag">#visitsedona</p>
